# internal/application/model/address_type.go
@@ -4,21 +4,23 @@ import "github.com/niv-e/phonebook-api/internal/domain"
 
 type AddressType struct {
 	Street     string
-	CityId     string
+	CityId     uint
+	CityName  string
 	PostalCode string
-	CountryId  string
+	CountryName string
+	CountryId  uint
 }
 
-func NewAddress(streetId, cityId, postalCode, countryId string) (AddressType, error) {
-	if streetId == "" {
+func NewAddress(street, postalCode string, cityId, countryId uint) (AddressType, error) {
+	if street == "" {
 		return AddressType{}, domain.NewInvalidAddressError("street is required")
 	}
-	if cityId == "" {
+	if cityId == 0 {
 		return AddressType{}, domain.NewInvalidAddressError("city is required")
 	}
 
 	return AddressType{
-		Street:     streetId,
+		Street:     street,
 		CityId:     cityId,
 		PostalCode: postalCode,
 		CountryId:  countryId,
