# internal/infrastructure/persistence/postgres_contact_repository.go
@@ -5,7 +5,7 @@ import (
 	"os"
 	"sync"
 
-	"github.com/niv-e/phonebook-api/internal/domain"
+	"github.com/niv-e/phonebook-api/internal/application/model"
 	"github.com/niv-e/phonebook-api/internal/domain/entity"
 	"gorm.io/driver/postgres"
 	"gorm.io/gorm"
@@ -35,6 +35,7 @@ func GetContactRepository() *PostgresContactRepository {
 	})
 	return contactRepository
 }
+
 func NewPostgresContactRepository(dsn string) (*PostgresContactRepository, error) {
 	db, err := gorm.Open(postgres.Open(dsn), &gorm.Config{})
 	if err != nil {
@@ -42,49 +43,73 @@ func NewPostgresContactRepository(dsn string) (*PostgresContactRepository, error
 	}
 	return &PostgresContactRepository{db: db}, nil
 }
-func (r *PostgresContactRepository) Save(contact entity.ContactEntity) error {
-	tx := r.db.Begin()
 
-	// Handle Country: Avoid duplicates
-	var country entity.CountryEntity
-	if err := tx.Where("name = ?", contact.Address.City.Country.Name).FirstOrCreate(&country, contact.Address.City.Country).Error; err != nil {
-		tx.Rollback()
-		return domain.NewInvalidContactError("failed to save or find country: " + err.Error())
+func (r *PostgresContactRepository) Save(contact model.ContactType) error {
+	contactEntity := entity.ContactEntity{
+		ID:        *contact.ID,
+		FirstName: contact.FirstName,
+		LastName:  contact.LastName,
+		Address: entity.AddressEntity{
+			Street:     contact.Address.Street,
+			PostalCode: contact.Address.PostalCode,
+			City: entity.CityEntity{
+				ID: contact.Address.CityId,
+				Country: entity.CountryEntity{
+					ID: contact.Address.CountryId,
+				},
+			},
+		},
+		Phones: convertToPhoneEntities(contact.Phones),
 	}
-	contact.Address.City.CountryID = country.ID
+	return r.db.Save(&contactEntity).Error
+}
 
-	// Handle City: Avoid duplicates
-	var city entity.CityEntity
-	if err := tx.Where("name = ? AND country_id = ?", contact.Address.City.Name, country.ID).FirstOrCreate(&city, contact.Address.City).Error; err != nil {
-		tx.Rollback()
-		return domain.NewInvalidContactError("failed to save or find city: " + err.Error())
-	}
-	contact.Address.CityID = city.ID
-
-	// Save Address
-	if err := tx.Create(&contact.Address).Error; err != nil {
-		tx.Rollback()
-		return domain.NewInvalidContactError("failed to save address: " + err.Error())
-	}
-
-	// Save Contact (ID is generated here)
-	if err := tx.Create(&contact).Error; err != nil {
-		tx.Rollback()
-		return domain.NewInvalidContactError("failed to save contact: " + err.Error())
+func (r *PostgresContactRepository) FindPaginated(page, pageSize int) ([]model.ContactType, error) {
+	var contacts []entity.ContactEntity
+	offset := (page - 1) * pageSize
+	if err := r.db.Preload("Address.City.Country").Preload("Phones").Limit(pageSize).Offset(offset).Find(&contacts).Error; err != nil {
+		return nil, err
 	}
 
-	// Assign ContactID to Phones
-	for i := range contact.Phones {
-		contact.Phones[i].ContactID = *contact.ID // Assuming ID is *string (UUID)
+	var contactDTOs []model.ContactType
+	for _, contact := range contacts {
+		contactDTOs = append(contactDTOs, model.ContactType{
+			ID:        &contact.ID,
+			FirstName: contact.FirstName,
+			LastName:  contact.LastName,
+			Address: model.AddressType{
+				Street:      contact.Address.Street,
+				PostalCode:  contact.Address.PostalCode,
+				CityId:      contact.Address.City.ID,
+				CityName:    contact.Address.City.Name,
+				CountryId:   contact.Address.City.Country.ID,
+				CountryName: contact.Address.City.Country.Name,
+			},
+			Phones: convertToPhoneDTOs(contact.Phones),
+		})
 	}
 
-	// Batch insert Phones
-	if len(contact.Phones) > 0 {
-		if err := tx.CreateInBatches(contact.Phones, 100).Error; err != nil { // Batch size of 100
-			tx.Rollback()
-			return domain.NewInvalidContactError("failed to save phones: " + err.Error())
-		}
-	}
+	return contactDTOs, nil
+}
 
-	return tx.Commit().Error
+func convertToPhoneEntities(phones []model.PhoneType) []entity.PhoneEntity {
+	var phoneEntities []entity.PhoneEntity
+	for _, phone := range phones {
+		phoneEntities = append(phoneEntities, entity.PhoneEntity{
+			Number: phone.Number,
+			Type:   phone.Type,
+		})
+	}
+	return phoneEntities
+}
+
+func convertToPhoneDTOs(phones []entity.PhoneEntity) []model.PhoneType {
+	var phoneDTOs []model.PhoneType
+	for _, phone := range phones {
+		phoneDTOs = append(phoneDTOs, model.PhoneType{
+			Number: phone.Number,
+			Type:   phone.Type,
+		})
+	}
+	return phoneDTOs
 }
